2005-09-13  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (SourceWindow): Fixed typo in loading glade file.  

2005-09-13  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (SourceWindow): Changed glade path to refer to frysk.bin.Config.GLADEPATH.

2005-09-09  Adam Jocksch  <ajocksch@redhat.com>

	* cparser/CTagsParser.java: Added comments.
	(escapeChars): Removed.
	
	* SourceViewWidget.java: Created new constants for comment, global tags
	
	* SourceBuffer.java (getNextLine): Removed extraneous variables.
	Refactored strings into constants.
	
	* SourceWindow.java (SourceWindow): Window now hidden until loading complete.
	Excess constants pruned.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* Move com/redhat/fedora/frysk/gui/srcwin/ to frysk/gui/srcwin/.

2005-09-08  Andrew Cagney  <cagney@redhat.com>

	* cparser/CDTParser.java: Delete.
	* cparser/SimpleParser.java: Ditto.
	* SourceBuffer.java: Revert switch to CDTParser.

2005-09-07  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java: moved from com.redhat.fedora.frysk.gui
	* cparser/SimpleParser.java (parse): added support for bitshift and quote characters
	* cparser/CDTParser.java: Added
	* SourceBuffer.java (loadFile): changed to use CDTParser
	(addFunction): Added overloaded method to take char offset from start of file
	(addVaraible): Changed to use only character offset, not line number

2005-09-07  Adam Jocksch  <ajocksch@redhat.com>

	* cparser/SimpleParser.java: Added to repository

	* SourceBuffer.java (loadFile): Changed to use SimpleParser instead of CTagsParser

	* SourceWindow.java (createActions): Changed icon for run action to run.png

2005-09-06 Adam Jocksch <ajocksch@redhat.com>

	* cparser: removed all but CTagsParser.java

	* VariableLocation.java: changed to Variable.java
	now inherits from CodeItem

	* CodeItem.java: Added

	* StaticParser.java: Added

2005-09-01 Adam Jocksch <ajocksch@redhat.com>
	
	* SourceWindow.java: added createActions, createMenus